Bug 1304692 - Make puppet widget get coordinate rounding from parent. r=smaug

MozReview-Commit-ID: A3ornUMDmt8